5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1716_2502.log
== SUBMITION (2019-05-16 11:52:07) 
-- CODE:
from math import*
n = int(input("Digite um numero: "))
i = 0
sinal=+1
soma = 0
while(i< n):
	soma = soma + (sqrt(12))*sinal*1/((2*i+1)*(3**i))
	i = i + 1
	sinal=-sinal
print(round(soma,8))

-- EXECUTION TIME:
0.308585
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:52:15) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i<n):
	d = ((2*i)+1)*(3**expoente)
	x = 12**(1/2)*(sinal*1)/d
	soma = soma + x 
	i= i+1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:52:21) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i<n):
	d = ((2*i)+1)*(3**expoente)
	x = 12**(1/2)*(sinal*1)/d
	soma = soma + x 
	i= i+1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:52:24) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i<n):
	d = ((2*i)+1)*(3**expoente)
	x = 12**(1/2)*(sinal*1)/d
	soma = soma + x 
	i= i+1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.196675
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:54:15) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i= i+1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:54:31) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.169225
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:54:34) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:54:40) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:54:44) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:55:01) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:57:37) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = +
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 5
    sinal = +
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:57:42) 
-- CODE:
n = int(input("repeticao do termo: "))
soma = 0
i = 0
expoente = 0
sinal = 1
while(i < n):
	d = ((2 * i) + 1) * (3**expoente)
	x = 12**(1 / 2) * (sinal * 1)/d
	soma = soma + x 
	i = i + 1
	sinal = sinal * (-1)
	expoente = expoente + 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
